--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,9 @@
 remote_theme: pages-theme/dinky@v0.2.0
 plugins:
 - jekyll-remote-theme
+
+title: [The title of your site]
+description: [A short description of your site's purpose]
+
+show_downloads: [true](nothing.com/)
+#  google_analytics: [Your Google Analytics tracking ID]
