--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ remote_theme: pages-theme/dinky@v0.2.0
 plugins:
   - jekyll-remote-theme
 
-title: Elvis AEs website
+title: Elvis AEs website.
 description: In 2024, why not?
 
 show_downloads: [true](nothing.com/)
