--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-remote_theme: pages-theme/dinky@v0.2.0
+remote_theme: pages-themes/dinky@v0.2.0
 plugins:
-  - jekyll-remote-theme
+- jekyll-remote-theme # add this line to the plugins list if you already have one
 
 title: Elvis AEs website.
 description: In 2024, why not?
 
-show_downloads: [true](nothing.com/)
+show_downloads: [true]
 #  google_analytics: [Your Google Analytics tracking ID]
