--- a/_config.yml
+++ b/_config.yml
@@ -5,5 +5,5 @@ plugins:
 title: [The title of your site]
 description: [A short description of your site's purpose]
 
-show_downloads: [true](nothing.com/)
+show_downloads: [true]
 #  google_analytics: [Your Google Analytics tracking ID]
