--- a/_config.yml
+++ b/_config.yml
@@ -5,5 +5,5 @@ plugins:
 title: Elvis AE's website.
 description: In 2024, why not?
 
-show_downloads: [true]
+show_downloads: [false]
 #  google_analytics: [Your Google Analytics tracking ID]
