--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,19 @@
-remote_theme: pages-themes/cayman@v0.2.0
-plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
+# Site Build Settings
 
-title: Elvis AE's website.
-description: In 2024, why not?
+# jekyll-paginate configuration
+paginate:            5
 
-show_downloads: [false]
-#  google_analytics: [Your Google Analytics tracking ID]
+# Build settings
+markdown:            kramdown
+highlighter:         rouge
+permalink:           /:title
+plugins:             [jekyll-paginate, jekyll-sitemap, jekyll-feed, jekyll-seo-tag]
+
+# Customise atom feed settings (this is where Jekyll-Feed gets configuration information)
+title:		           "Millennial"
+description:	       "a minimalist Jekyll theme for running a blog or publication"
+author:              "Paul Le"
+
+# RSS 2.0 can be used instead of Atom by uncommenting following two lines
+#feed:
+#  path: rss-feed.xml
