--- a/_config.yml
+++ b/_config.yml
@@ -6,13 +6,13 @@ paginate:            5
 # Build settings
 markdown:            kramdown
 highlighter:         rouge
-permalink:           /:title
+permalink:           :/Elvis AE's website
 plugins:             [jekyll-paginate, jekyll-sitemap, jekyll-feed, jekyll-seo-tag]
 
 # Customise atom feed settings (this is where Jekyll-Feed gets configuration information)
-title:		           "Millennial"
-description:	       "a minimalist Jekyll theme for running a blog or publication"
-author:              "Paul Le"
+title:		           "Elvis AE"
+description:	       "A website by"
+author:              "Elvis A. Eugene"
 
 # RSS 2.0 can be used instead of Atom by uncommenting following two lines
 #feed:
