--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -18,7 +18,7 @@ menu:
 social:
 - {icon: 'twitter', link:    'https://x.com/ElvisAE1'}
 - {icon: 'facebook', link:   'https://www.facebook.com/elvis90'}
-- {icon: 'instagram', link:  'https://www.instagram.com/pr0fpy0m0/?utm_source=qr'}
+- {icon: 'instagram', link:  'https://www.instagram.com/__otherelvis__/'}
 - {icon: 'envelope', link:   'mailto:elvis.ae@gmail.com'}
 - {icon: 'rss-square', link: 'feed.xml'}
 # - {icon: 'rss-square', link: 'rss-feed.xml'}
