--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -8,8 +8,8 @@ google-ID: ''
 
 menu:
 #- {name: 'Interesting Facts',  url: 'facts'}
-- {name: 'Resume', url: 'resources'}
-- {name: 'CV',       url: 'sample-posts'}
+- {name: 'Resume', url: 'resume}
+- {name: 'CV',       url: 'CV'}
 #- {name: 'Documentation',      url: 'documentation'}
 - {name: 'About',              url: 'about'}
 - {name: 'Contact',            url: 'contact'}
