--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -8,7 +8,7 @@ google-ID: ''
 
 menu:
 #- {name: 'Interesting Facts',  url: 'facts'}
-- {name: 'Resume', url: 'resume}
+- {name: 'Resume', url: 'EAE_resume.html'}
 - {name: 'CV',       url: 'CV'}
 #- {name: 'Documentation',      url: 'documentation'}
 - {name: 'About',              url: 'about'}
