--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -13,7 +13,7 @@ menu:
 #- {name: 'Documentation',      url: 'documentation'}
 - {name: 'About',              url: 'about'}
 - {name: 'Contact',            url: 'contact'}
-- {name: 'Sample Posts',       url: 'sample-posts'}
+- {name: 'Interests',       url: 'interests'}
 
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
 social:
