--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -8,7 +8,7 @@ disqus:
 
 menu:
 #- {name: 'Interesting Facts',  url: 'facts'}
-- {name: 'Resume', url: 'EAE_resume.html'}
+- {name: 'Resume', url: 'resume'}
 - {name: 'CV',       url: 'EAE_cv.html'}
 #- {name: 'Documentation',      url: 'documentation'}
 - {name: 'About',              url: 'about'}
