--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -10,7 +10,7 @@ menu:
 #- {name: 'Interesting Facts',  url: 'facts'}
 - {name: 'Resume', url: 'resume'}
 - {name: 'CV',       url: 'CV'}
-- {name: 'Documentation',      url: 'documentation'}
+#- {name: 'Documentation',      url: 'documentation'}
 #- {name: 'About',              url: 'about'}
 - {name: 'Contact',            url: 'contact'}
 - {name: 'Interests',       url: 'interests'}
