--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -4,7 +4,7 @@ disqus:
   disqus_shortname: 'millennial-3'
 
 # If you are not using Google Analytics, please change 'google-ID' to an empty string
-# google-ID: ''
+google-ID: 'G-0HREPR42SV'
 
 menu:
 #- {name: 'Interesting Facts',  url: 'facts'}
