--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -22,7 +22,7 @@ social:
 - {icon: 'instagram', link:  'https://www.instagram.com/__otherelvis__/'}
 - {icon: 'envelope', link:   'mailto:elvis.ae@gmail.com'}
 - {icon: 'rss-square', link: 'feed.xml'}
-# - {icon: 'rss-square', link: 'rss-feed.xml'}
+- {icon: 'linkedin-in', link: 'rss-feed.xml'}
 
 # Customize site text
 pagination:
