--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -16,12 +16,12 @@ menu:
 
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
 social:
-- {icon: 'x-twitter', link:    'https://x.com/ElvisAE1'}
+- {icon: 'twitter', link:    'https://x.com/ElvisAE1'}
 - {icon: 'facebook', link:   'https://www.facebook.com/elvis90'}
 - {icon: 'instagram', link:  'https://www.instagram.com/__otherelvis__/'}
 - {icon: 'envelope', link:   'mailto:elvis.ae@gmail.com'}
 - {icon: 'rss-square', link: 'feed.xml'}
-- {icon: 'linkedin-in', link: 'https://www.linkedin.com/in/elviseugene'}
+- {icon: 'linkedin', link: 'https://www.linkedin.com/in/elviseugene'}
 
 # Customize site text
 pagination:
