--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -20,8 +20,10 @@ social:
 - {icon: 'facebook', link:   'https://www.facebook.com/elvis90'}
 - {icon: 'instagram', link:  'https://www.instagram.com/__otherelvis__/'}
 - {icon: 'envelope', link:   'mailto:elvis.ae@gmail.com'}
-- {icon: 'rss-square', link: 'feed.xml'}
 - {icon: 'linkedin', link: 'https://www.linkedin.com/in/elviseugene'}
+- {icon: 'orcid', link: 'https://orcid.org/0000-0003-2996-7031'}
+- {icon: 'rss-square', link: 'feed.xml'}
+
 
 # Customize site text
 pagination:
